--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="tudo">
     <section class="menu">
         <header class="menu__header">
-            <img src="assets\vector.png">
-            <h3 class="menu__title">Fulana de Tal</h3>
+            <img src="assets\vector.svg">
+            <h3 class="menu__title">Abraham Oliden</h3>
         </header>
         <nav>
             <ul class="menu__list">
@@ -29,7 +29,6 @@
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
                 <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
         </nav>
     </section>
 
@@ -38,7 +37,7 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
+                <h2 class="title__bio">Hola, mi nombre es Abraham Oliden y construyo paginas web</h2>
                 <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
@@ -271,7 +270,7 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
+                <p>Desarrollado por Abraham Oliden</p>
                 <p>2022</p>
             </div>
         </section>
