--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
                 <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
             </ul>
+            <li class="menu__list__item__contato"><a href="#contacto">Contacto</a></li>
         </nav>
     </section>
 
@@ -204,7 +205,7 @@
             </div>
         </div>  
 
-        <div class="experience__box">
+        <div class="experience__box__reverse">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\forca_print.png">
             <div class="experience__info">
@@ -232,7 +233,7 @@
             </div>
         </div>  
 
-        <div class="experience__box">
+        <div class="experience__box__reverse">
             <img class="experience__img" src="assets\forca2_print.png">
             <div class="experience__info-container">
             <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
