--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Abraham Oliden y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Abraham Oliden y construyo páginas web</h2>
+                <h3 class="title__subsection">Soy formada en desarrollo front end par parte de freeCodeCamp y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="">Github <img src="assets\arrow.svg"> </a></li>
@@ -74,22 +74,15 @@
 
                 <div class="skills__box">
                     <ul>
+                        <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
+                        <li class="skills__name">CSS</li>
+                    </ul>
+                </div>
+
+                <div class="skills__box">
+                    <ul>
                         <li class="skills__img"> <img src="assets\js_icon.png" alt=""></li>
                         <li class="skills__name">Javascript</li>
-                    </ul>
-                </div>
-
-                <div class="skills__box">
-                    <ul>
-                        <li class="skills__img"> <img src="assets\php_icon.png" alt=""></li>
-                        <li class="skills__name">PHP</li>
-                    </ul>
-                </div>
-
-                <div class="skills__box">
-                    <ul>
-                        <li class="skills__img"><img src="assets\nodejs_icon.png" alt=""></li>
-                        <li class="skills__name">Node JS</li>
                     </ul>
                 </div>
 
@@ -102,10 +95,21 @@
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
-                        <li class="skills__name">CSS</li>
+                        <li class="skills__img"> <img  alt="git"></li>
+                        <li class="skills__name">git</li>
                     </ul>
                 </div>
+
+                <div class="skills__box">
+                    <ul>
+                        <li class="skills__img"><img  alt="abr k sale"></li>
+                        <li class="skills__name">Abr k sale</li>
+                    </ul>
+                </div>
+
+                
+
+                
         </div>
     </section>
 
@@ -115,15 +119,15 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
-                        <li class="hobbies__name"> Patinaje</li>
+                        <li class="hobbies__img"><img src=""></li>
+                        <li class="hobbies__name"> Matemáticas</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                        <li class="hobbies__name">Tocar bajo</li>
+                        <li class="hobbies__name">Tocar guitarra</li>
                     </ul>
                 </div>
 
@@ -136,22 +140,22 @@
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
-                        <li class="hobbies__name">Ver séries</li>
+                        <li class="hobbies__img"><img  alt="Ler"></li>
+                        <li class="hobbies__name">Leer</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt=""> </li>
-                        <li class="hobbies__name">Cocinar</li>
+                        <li class="hobbies__img"> <img src=""" alt=""> </li>
+                        <li class="hobbies__name">Idiomas</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\camera_icon.png" alt=""> </li>
-                        <li class="hobbies__name">Tomar fotos</li>
+                        <li class="hobbies__img"> <img src="" alt=""> </li>
+                        <li class="hobbies__name">Abr k + sale</li>
                     </ul>
                 </div>
         </div>
@@ -164,25 +168,25 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__img"><img src="assets\fcc_primary_large.svg"></li>
+                    <li class="academic__courses__item__title"><h4>Responsive Web Design</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2023</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__img"><img src="assets\fcc_primary_large.svg"></li>
+                    <li class="academic__courses__item__title"><h4>JavaScript Algorithms and Data Structures</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2023</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\ufrj_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Posgrado en diseño</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - UFRJ</p></li>
+                    <li class="academic__courses__item__img" id="alura-one"><img src="assets\alura_logo.png"></li>
+                    <li class="academic__courses__item__title"><h4>Oracle ONE</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>In progress</p></li>
                 </ul>
             </div>
         </div>
