added my socials' links

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <h3 class="title__subsection">Soy formada en desarrollo front end par parte de freeCodeCamp y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.svg"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.svg"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.svg"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/AbrahamOliden" target="_blank">Github <img src="assets\arrow.svg"> </a></li>
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/abraham-oliden/" target="_blank">Linkedin <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="https://www.freecodecamp.org/Abraham_Oliden" target="_blank">freeCodeCamp <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="" target="_blank">Currículo <img src="assets\arrow.svg"></a></li>
                 </ul>
             </div>
         </div>
