--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Abraham Oliden y construyo páginas web</h2>
-                <h3 class="title__subsection">Soy formada en desarrollo front end par parte de freeCodeCamp y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h3 class="title__subsection">Soy formada en desarrollo front end por parte de freeCodeCamp y actualmente soy participante del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://github.com/AbrahamOliden" target="_blank">Github <img src="assets\arrow.svg"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/abraham-oliden/" target="_blank">Linkedin <img src="assets\arrow.svg"></a></li>
                     <li class="title__network__item"><a href="https://www.freecodecamp.org/Abraham_Oliden" target="_blank">freeCodeCamp <img src="assets\arrow.svg"></a></li>
-                    <li class="title__network__item"><a href="" target="_blank">Currículo <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="" >Currículo <img src="assets\arrow.svg"></a></li>
                 </ul>
             </div>
         </div>
@@ -55,8 +55,8 @@
     <section class="about" id="sobre-mi">
         <div class="about__container">
             <h3 class="about__title">Sobre mi</h3>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.  </p>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+            <p class="about__paragraph">I'm a highly motivated junior Front End developer with a passion for mathematics.  Always eager to learn and grow, I'm actively building my skills in React, Redux, and accessibility.  Excited to contribute to building user-friendly and performant web experiences that prioritize inclusivity and best practices.</p>
+            <p class="about__paragraph">Beyond coding, I'm a lifelong learner with a passion for diverse fields like music, mathematics, languages, and exploring new subjects. This thirst for knowledge fuels my approach to web development, allowing me to see problems from various angles and come up with innovative solutions.</p>
             <!-- Si quieres, pon tú firma acá! -->
         </div>
     </section>
