fontAwesome icons for my skills

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- fontAwesome logos reference -->
+    <link href="assets/fontawesome-6.5.2/css/fontawesome.css" rel="stylesheet" />
+    <link href="assets/fontawesome-6.5.2/css/brands.css" rel="stylesheet" />
+    <link href="assets/fontawesome-6.5.2/css/solid.css" rel="stylesheet" />
     <!-- Fonte del Proyecto Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <title> Mi Portafolio</title>
@@ -67,50 +71,48 @@
             <div class="skills__line">
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets\htlm.png"></li>
+                        <li class="skills__img">
+                            <i class="fa-brands fa-html5"></i>
+                        </li>
                         <li class="skills__name"> HTML 5</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
+                        <li class="skills__img"> <i class="fa-brands fa-css3"></i> </li>
                         <li class="skills__name">CSS</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\js_icon.png" alt=""></li>
+                        <li class="skills__img"> <i class="fa-brands fa-square-js"></i></li>
                         <li class="skills__name">Javascript</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
+                        <li class="skills__img"> <i class="fa-brands fa-react"></i> </li>
                         <li class="skills__name">React</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img  alt="git"></li>
-                        <li class="skills__name">git</li>
+                        <li class="skills__img"><img src="assets/redux-logo.svg" alt="abr k sale"></li>
+                        <li class="skills__name">Abr k sale</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img  alt="abr k sale"></li>
-                        <li class="skills__name">Abr k sale</li>
+                        <li class="skills__img"> <i class="fa-brands fa-git-alt"></i> </li>
+                        <li class="skills__name">git</li>
                     </ul>
                 </div>
-
-                
-
-                
-        </div>
+            </div>
     </section>
 
     <!-- Sección de Hobbies -->
