--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
     <link href="assets/fontawesome-6.5.2/css/solid.css" rel="stylesheet" />
     <!-- Fonte del Proyecto Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <title> Mi Portafolio</title>
+    <title> My Portfolio</title>
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -26,14 +26,14 @@
         </header>
         <nav>
             <ul class="menu__list">
-                <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
+                <li class="menu__list__item"><a href="#sobre-mi">About me</a></li>
                 <li class="menu__list__item"><a href="#skills">Skills</a></li>
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
-                <li class="menu__list__item"><a href="#formacion">Formación</a></li>
-                <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a href="#formacion">Education</a></li>
+                <li class="menu__list__item"><a href="#xp">Proyects</a></li>
+                <li class="menu__list__item"><a href="#contacto">Contact</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">Contacto</a></li>
+            <li class="menu__list__item__contato"><a href="#contacto">Contact</a></li>
         </nav>
     </section>
 
@@ -42,14 +42,14 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Abraham Oliden y construyo páginas web</h2>
-                <h3 class="title__subsection">Soy formada en desarrollo front end por parte de freeCodeCamp y actualmente soy participante del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hello, I'm Abraham Oliden and I build webpages</h2>
+                <h3 class="title__subsection">I'm trained in Front End development by freeCodeCamp and I am currently participating in the Oracle ONE project with Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://github.com/AbrahamOliden" target="_blank">Github <img src="assets\arrow.svg"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/abraham-oliden/" target="_blank">Linkedin <img src="assets\arrow.svg"></a></li>
                     <li class="title__network__item"><a href="https://www.freecodecamp.org/Abraham_Oliden" target="_blank">freeCodeCamp <img src="assets\arrow.svg"></a></li>
-                    <li class="title__network__item"><a href="" >Currículo <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="" >Curriculum <img src="assets\arrow.svg"></a></li>
                 </ul>
             </div>
         </div>
@@ -58,7 +58,7 @@
     <!-- Sección sobre mi -->
     <section class="about" id="sobre-mi">
         <div class="about__container">
-            <h3 class="about__title">Sobre mi</h3>
+            <h3 class="about__title">About me</h3>
             <p class="about__paragraph">I'm a highly motivated junior Front End developer with a passion for mathematics.  Always eager to learn and grow, I'm actively building my skills in React, Redux, and accessibility.  Excited to contribute to building user-friendly and performant web experiences that prioritize inclusivity and best practices.</p>
             <p class="about__paragraph">Beyond coding, I'm a lifelong learner with a passion for diverse fields like music, mathematics, languages, and exploring new subjects. This thirst for knowledge fuels my approach to web development, allowing me to see problems from various angles and come up with innovative solutions.</p>
             <!-- Si quieres, pon tú firma acá! -->
@@ -122,42 +122,42 @@
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"><img src=""></li>
-                        <li class="hobbies__name"> Matemáticas</li>
+                        <li class="hobbies__name">Math</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                        <li class="hobbies__name">Tocar guitarra</li>
+                        <li class="hobbies__name">Play guitar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
-                        <li class="hobbies__name">Oir música</li>
+                        <li class="hobbies__name">Listen to music</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"><img  alt="Ler"></li>
-                        <li class="hobbies__name">Leer</li>
+                        <li class="hobbies__name">Read</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src=""" alt=""> </li>
-                        <li class="hobbies__name">Idiomas</li>
+                        <li class="hobbies__name">Languages</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src="" alt=""> </li>
-                        <li class="hobbies__name">Abr k + sale</li>
+                        <li class="hobbies__name">Studying</li>
                     </ul>
                 </div>
         </div>
@@ -165,7 +165,7 @@
 
         <!-- Sección de Formación académica -->
     <section class="academic" id="formacion">
-        <h2 class="academic__title" >Formación académica</h2>
+        <h2 class="academic__title" >Educational background</h2>
         <div class="academic__courses">
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
@@ -196,17 +196,17 @@
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profesional</h2>
+        <h2 class="experience__section__title" >Professional Experience</h2>
         <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\decod_print.png">
             <div class="experience__info">
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Alura Codificador </h3>
+                <h2 class="experience__title">Secret number game</h2>
+                <h3 class="experience__text">Alura Challenge </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repository</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
                     </div>
             </div>
         </div>  
@@ -219,8 +219,8 @@
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repository</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
                     </div>
             </div>
         </div>  
@@ -233,8 +233,8 @@
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repository</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
                     </div>
             </div>
         </div>  
@@ -246,8 +246,8 @@
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repository</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
                     </div>
         </div>
         </div>  
@@ -259,15 +259,15 @@
                     <img class="formcontato__img" src="assets\contact_image.png">
                 </div>
                 <div class="formcontato__text">
-                    <h2 class="formcontato__title">Contacto</h2>
-                    <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-                    <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
+                    <h2 class="formcontato__title">Contact</h2>
+                    <h3 class="formcontato__subtext">Want to contact me?</h3>
+                    <h3 class="formcontato__subtext">Complete the form below and I will get in touch as soon as possible. </h3>
                     <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
+                        <input class="formcontato__input" type="text" name="nombre" placeholder="Name">
                         <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                        <input class="formcontato__input" type="text" name="asunto" placeholder="Subject">
+                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Message"></textarea>
+                        <button type="submit" class="formcontato__botao">Send message</button>
                     </form>
                 </div>
             </div>
@@ -276,8 +276,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Abraham Oliden</p>
-                <p>2022</p>
+                <p>Developed by Abraham Oliden</p>
+                <p>2024</p>
             </div>
         </section>
     </div>
