--- a/index.html
+++ b/index.html
@@ -215,42 +215,15 @@
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\forca_print.png">
             <div class="experience__info">
-                <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
+                <h2 class="experience__title">Text Encrypter</h2>
+                <h3 class="experience__text">Alura Challenge</h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                             <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repository</button></a></span>
                             <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
                     </div>
             </div>
-        </div>  
-
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\secretcode_print.png">
-            <div class="experience__info-container">
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repository</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
-                    </div>
-            </div>
-        </div>  
-
-        <div class="experience__box__reverse">
-            <img class="experience__img" src="assets\forca2_print.png">
-            <div class="experience__info-container">
-            <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repository</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Go to demo</button></a></span>
-                    </div>
         </div>
-        </div>  
 
         <!-- Sección de Contacto -->
         <section class="formcontato" id="contacto">
