changed curriculum for resume cause I'm stupid

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li class="title__network__item"><a href="https://github.com/AbrahamOliden" target="_blank">Github <img src="assets\arrow.svg"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/abraham-oliden/" target="_blank">Linkedin <img src="assets\arrow.svg"></a></li>
                     <li class="title__network__item"><a href="https://www.freecodecamp.org/Abraham_Oliden" target="_blank">freeCodeCamp <img src="assets\arrow.svg"></a></li>
-                    <li class="title__network__item"><a href="" >Curriculum <img src="assets\arrow.svg"></a></li>
+                    <li class="title__network__item"><a href="" >Resume <img src="assets\arrow.svg"></a></li>
                 </ul>
             </div>
         </div>
