fontAwesome icons for Hobbies section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="menu__list__item"><a href="#skills">Skills</a></li>
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Education</a></li>
-                <li class="menu__list__item"><a href="#xp">Proyects</a></li>
+                <li class="menu__list__item"><a href="#xp">Projects</a></li>
                 <li class="menu__list__item"><a href="#contacto">Contact</a></li>
             </ul>
             <li class="menu__list__item__contato"><a href="#contacto">Contact</a></li>
@@ -72,7 +72,7 @@
                 <div class="skills__box">
                     <ul>
                         <li class="skills__img">
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-html5 fa-2x skills__img__icon"></i>
                         </li>
                         <li class="skills__name"> HTML 5</li>
                     </ul>
@@ -80,35 +80,45 @@
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <i class="fa-brands fa-css3"></i> </li>
+                        <li class="skills__img">
+                            <i class="fa-brands fa-css3 fa-2x skills__img__icon"></i>
+                        </li>
                         <li class="skills__name">CSS</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <i class="fa-brands fa-square-js"></i></li>
+                        <li class="skills__img">
+                            <i class="fa-brands fa-square-js fa-2x skills__img__icon"></i>
+                        </li>
                         <li class="skills__name">Javascript</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <i class="fa-brands fa-react"></i> </li>
+                        <li class="skills__img">
+                            <i class="fa-brands fa-react fa-2x skills__img__icon"></i>
+                        </li>
                         <li class="skills__name">React</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets/redux-logo.svg" alt="abr k sale"></li>
-                        <li class="skills__name">Abr k sale</li>
+                        <li class="skills__img">
+                            <img src="assets/redux-logo.svg" class="skills__img__image" alt="abr k sale">
+                        </li>
+                        <li class="skills__name">Redux</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <i class="fa-brands fa-git-alt"></i> </li>
+                        <li class="skills__img">
+                            <i class="fa-brands fa-git-alt fa-2x skills__img__icon"></i>
+                        </li>
                         <li class="skills__name">git</li>
                     </ul>
                 </div>
@@ -121,42 +131,54 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src=""></li>
+                        <li class="hobbies__img"><img src="">
+                            <i class="fa-solid fa-infinity fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Math</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
+                        <li class="hobbies__img">
+                            <i class="fa-solid fa-guitar fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Play guitar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
+                        <li class="hobbies__img">
+                            <i class="fa-solid fa-headphones fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Listen to music</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img  alt="Ler"></li>
+                        <li class="hobbies__img">
+                            <i class="fa-solid fa-book fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Read</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src=""" alt=""> </li>
+                        <li class="hobbies__img">
+                            <i class="fa-solid fa-language fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Languages</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="" alt=""> </li>
+                        <li class="hobbies__img">
+                            <i class="fa-solid fa-glasses fa-2x hobbies__img__icon"></i>
+                        </li>
                         <li class="hobbies__name">Studying</li>
                     </ul>
                 </div>
