--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img" id="alura-one"><img src="assets\alura_logo.png"></li>
+                    <li class="academic__courses__item__img academic__courses__item__img__alura"><img src="assets\alura_logo.png"></li>
                     <li class="academic__courses__item__title"><h4>Oracle ONE</h4></li>
                     <li class="academic__courses__item__subtitle"><p>In progress</p></li>
                 </ul>
