--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                     <h3 class="formcontato__subtext">Want to contact me?</h3>
                     <h3 class="formcontato__subtext">Complete the form below and I will get in touch as soon as possible. </h3>
                     <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Name">
-                        <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Subject">
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Message"></textarea>
+                        <input class="formcontato__input" type="text" name="name" id="name-input" placeholder="Name">
+                        <input class="formcontato__input" type="email" name="email" id="email-input" placeholder="E-mail">
+                        <input class="formcontato__input" type="text" name="subject" id="subject-input" placeholder="Subject">
+                        <textarea class="formcontato__textarea" rows="5" cols="40" id="message-input" name="message" placeholder="Message"></textarea>
                         <button type="submit" class="formcontato__botao">Send message</button>
                     </form>
                 </div>
