added script for validacion.js

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <input class="formcontato__input" type="email" name="email" id="email-input" placeholder="E-mail">
                         <input class="formcontato__input" type="text" name="subject" id="subject-input" placeholder="Subject">
                         <textarea class="formcontato__textarea" rows="5" cols="40" id="message-input" name="message" placeholder="Message"></textarea>
-                        <button type="submit" class="formcontato__botao">Send message</button>
+                        <button type="submit" class="formcontato__botao" id="button-input">Send message</button>
                     </form>
                 </div>
             </div>
