path to text encrypter at experience__img

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="experience__box__reverse">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\forca_print.png">
+            <img class="experience__img" src="assets\text-encrypter.png">
             <div class="experience__info">
                 <h2 class="experience__title">Text Encrypter</h2>
                 <h3 class="experience__text">Alura Challenge</h3>
