action for contact form setted to personal email with FormSubmit

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <h2 class="experience__section__title" >Professional Experience</h2>
         <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\decod_print.png">
+            <img class="experience__img" src="assets\secret-number-game.png">
             <div class="experience__info">
                 <h2 class="experience__title">Secret number game</h2>
                 <h3 class="experience__text">Alura Challenge </h3>
@@ -257,7 +257,7 @@
                     <h2 class="formcontato__title">Contact</h2>
                     <h3 class="formcontato__subtext">Want to contact me?</h3>
                     <h3 class="formcontato__subtext">Complete the form below and I will get in touch as soon as possible. </h3>
-                    <form class="formcontato__form" name="form" id="contact-form">
+                    <form class="formcontato__form" name="form" id="contact-form" action="https://formsubmit.co/abrahamoliden@protonmail.com" method="post">
                         <input class="formcontato__input" type="text" name="name" id="name-input" placeholder="Name" aria-describedby="name-input-error">
                         <span class="error-message" id="name-input-error"></span>
 
