--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <h2 class="formcontato__title">Contact</h2>
                     <h3 class="formcontato__subtext">Want to contact me?</h3>
                     <h3 class="formcontato__subtext">Complete the form below and I will get in touch as soon as possible. </h3>
-                    <form class="formcontato__form" name="form" id="contact-form">
+                    <form action="https://formsubmit.co/abrahamoliden@protonmail.com" method="POST" class="formcontato__form" name="form" id="contact-form">
                         <input class="formcontato__input" type="text" name="name" id="name-input" placeholder="Name" aria-describedby="name-input-error">
                         <span class="error-message" id="name-input-error"></span>
 
@@ -285,6 +285,6 @@
         </section>
     </div>
  <!-- Script del documento JavaScript -->
-<script src="validacion.js"></script>
+<!-- <script src="validacion.js"></script> -->
 </body>
 </html>
