--- a/index.html
+++ b/index.html
@@ -285,6 +285,6 @@
         </section>
     </div>
  <!-- Script del documento JavaScript -->
-<!-- <script src="validacion.js"></script> -->
+<script src="validacion.js"></script>
 </body>
 </html>
